<resources>
    <string name="app_name">Pitch Ground</string>
    <string name="share_inspire_connect">SHARE - INSPIRE - CONNECT</string>
    <string name="unsure_about_where">UNSURE ABOUT WHERE</string>
    <string name="you_fit_in">YOU FIT IN?</string>
    <string name="explore_now">explore now</string>
    <string name="investor">Investor</string>
    <string name="founder">Founder</string>
    <string name="who_are_you">WHO ARE YOU?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ready_to_share_your_pitch_with_the_world">Ready to share your \npitch with the world?</string>
</resources>