<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/who"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@color/appTheme"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/who_are_you"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/who"
        android:src="@drawable/oval" />

    <TextView
        android:id="@+id/shareText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="164dp"
        android:text="@string/share_inspire_connect"
        android:textColor="@color/appTheme" />

    <ImageView
        android:id="@+id/pic"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_above="@id/tvUnsure"
        android:layout_marginStart="15sp"
        android:layout_marginBottom="120sp"
        android:src="@drawable/pic"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnFounder"
        android:layout_width="190sp"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnInvestor"
        android:layout_marginStart="5sp"
        android:layout_marginBottom="50sp"
        android:layout_toEndOf="@id/pic"
        android:background="@drawable/button_bg"
        android:text="@string/founder"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnInvestor"
        android:layout_width="190sp"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvUnsure"
        android:layout_centerVertical="true"
        android:layout_marginStart="180sp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_bg"
        android:text="@string/investor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUnsure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvUnsureWhere"
        android:layout_centerHorizontal="true"
        android:text="@string/unsure_about_where"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUnsureWhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnExplore"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15sp"
        android:text="@string/you_fit_in"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnExplore"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="40sp"
        android:background="@drawable/button_bg"
        android:backgroundTint="@color/appTheme"
        android:text="@string/explore_now"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>